src/objects/Alert__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Articles to detail and communicate Temporary Information/Changes/Hot Items</description>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>For manual entry of due date by content developer</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External__c</fullName>
        <label>External</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FAQ__c</fullName>
        <description>FAQs about this Alert</description>
        <label>FAQ</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal__c</fullName>
        <label>Internal</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <description>Keywords</description>
        <label>Keywords</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lifespan__c</fullName>
        <label>Lifespan</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <description>Purpose of Alert</description>
        <label>Purpose</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reminders_Quick_Tips__c</fullName>
        <description>Reminders and Quick Tips about this Alert</description>
        <label>Reminders/Quick-Tips</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_Changing__c</fullName>
        <description>What is Changing via this Alert</description>
        <label>What is Changing</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>What_is_Not_Changing__c</fullName>
        <description>What is not changing via this alert</description>
        <label>What is Not Changing</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>What_s_Happening__c</fullName>
        <label>What’s Happening</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Alert</label>
    <pluralLabel>Alerts</pluralLabel>
</CustomObject>